--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,10 @@ strong { font-weight: bold; }
     text-indent: -9999px;
     width: 280px;
     height: 63px;
-    padding: 30px 0;
+    padding-top: 30px;
+    padding-bottom:0px;
+    padding-left: 0;
+    padding-right: 0;
     background: url(../img/logo.png) 20px center no-repeat;
 }
 
