se creó la clase para alinear texto
se creó una clase para justificar el texto de los parrafos.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,6 +171,9 @@ strong { font-weight: bold; }
 .what-we-do {
     margin-top: 50px;
 }
+.alineado-a-izquierda{
+ text-align: justify;   
+}
 
 .what-we-do .service {
     padding-bottom: 23px;
