--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -916,7 +916,7 @@ footer .social a:hover { background-position: left top; }
 
 .call-to-action-text .ca-button a {
     padding: 5px 22px;
-    background: #9d426b;
+    background: #61A0FF;
     color: #fff;
     text-decoration: none;
     -moz-box-shadow:
