integracion de contenido

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -764,7 +764,7 @@ footer .social a:hover { background-position: left top; }
     width: 120px;
     height: 30px;
     margin-top: 15px;
-    background: #9d426b;
+    background: #61A0FF;
     border: 0;
     font-family: 'Open Sans', Helvetica, Arial, sans-serif;
     font-size: 13px;
