--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -806,9 +806,12 @@ footer .social a:hover { background-position: left top; }
 /* ----- Google maps ----- */
 
 .map {
-    margin: 20px 20px 40px 20px;
-    height: 300px;
-    border: 5px solid #f8f8f8;
+
+    height: 600px;
+    border-top: 5px solid #f8f8f8;
+    border-bottom: 5px solid #f8f8f8;
+    width: 100%;
+
 }
 
 
